crates/wolf_sema/tests/snapshots/ctfe_diagnostics__staged_provenance_chain.snap
---
source: crates/wolf_sema/tests/ctfe_diagnostics.rs
expression: out
---
error[E0507]: the impl's `eq` does not match `Eq`'s declaration: it returns `bool`, but the trait says `int`
 --> mem:///main.lu:5:8
  |
2 |     fn eq(a: Self, b: Self) -> int
  |        -- declared here
...
5 | struct Pt {
  |        ^^ does not match the trait
  |        -- in code generated by `derive_eq` — invoked here
  |
  = note: the error is inside generated code: `derive_eq` produced this impl at compile time, and
    the generated output is checked like handwritten code (D29). Fix the generator or its
    input — there is no source line to edit.
